<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/violeta"
    tools:context="com.jaaziel.irc.crc_tx.MainActivity">

    <TextView
        android:id="@+id/mx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/transmitir"
        android:textColor="@color/negro"/>

    <EditText
        android:id="@+id/enter_mx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/mx"
        android:textColor="@color/colorAccent"
        android:hint="@string/minmax816"
        android:inputType="number"/>

    <TextView
        android:id="@+id/gx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/polinomio_generador_g_x"
        android:layout_below="@+id/enter_mx"
        android:textColor="@color/negro"/>

    <EditText
        android:id="@+id/enter_gx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/gx"
        android:textColor="@color/colorAccent"
        android:hint="@string/minmax48"
        android:inputType="number"/>

    <TextView
        android:id="@+id/tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_transmitido"
        android:layout_margin="10dp"
        android:textColor="@color/negro"
        android:layout_below="@+id/transmitir" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx"
        android:textColor="@color/negro"
        android:id="@+id/textView"
        android:layout_alignBaseline="@+id/resultado"
        android:layout_alignBottom="@+id/resultado"
        android:layout_alignLeft="@+id/tx"
        android:layout_alignStart="@+id/tx" />

    <Button
        android:id="@+id/transmitir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transmitirbtn"
        android:layout_below="@+id/enter_gx"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/reiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reiniciar"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/transmitir"
        android:layout_alignStart="@+id/transmitir"
        android:layout_alignRight="@+id/transmitir"
        android:layout_alignEnd="@+id/transmitir" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/negro"
        android:layout_below="@+id/tx"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

</RelativeLayout>
